# safmh

./: .gitignore  LICENSE  README.md  compose.yml  flake.nix  main.ipynb  main_analysis.ipynb  main_bert.ipynb  manual_analysis.xlsx  pyproject.toml
app/: README.md  docker-compose.yml  requirements.txt
app/backend/: Dockerfile  main.py  requirements.txt  schemas.py
app/frontend/: Dockerfile  app.py
app/utils/: generate_historical.py
app_v2/: docker-compose.yml
app_v2/backend/: pipe.py
app_v2/data/: processed_data_final.csv
app_v2/frontend/: Dockerfile  app.py
app_v2/utils/: crawl.py  translate.py
models/: svc_pipeline.pkl
notebooks/: bert.ipynb  main.ipynb
